--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,31 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html{
+  width: 100%;
+  height: 100%;
+  background: url('/images/login-bg.png');
 }
-
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #fff;
+}
+.login-form{
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+  text-align: center;
+  padding: 0 40px 30px 30px;
+  margin: 20px;
+  border: 1px solid white;
+}
+form{
+  line-height: 3;
+}
 a {
   color: #00B7FF;
 }
